--- a/PokemonReviewApp/appsettings.json
+++ b/PokemonReviewApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-A0OK84P;Initial Catalog=PokemonDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
