Added Authentication and Authorization with JWT

--- a/PokemonReviewApp/appsettings.json
+++ b/PokemonReviewApp/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": {
+    "Key": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9",
+    "Issuer": "https://localhost:7024/",
+    "Audience": "https://localhost:7024/"
+  },
+
   "AllowedHosts": "*"
 }
